--- a/package.json
+++ b/package.json
@@ -9,7 +9,12 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
-    "vue": "^2.6.10"
+    "node-sass": "^4.12.0",
+    "sass-loader": "^7.1.0",
+    "unsemantic": "^1.2.3",
+    "vue": "^2.6.10",
+    "webpack": "^4.36.1",
+    "webpack-cli": "^3.3.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.9.0",
