--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
   },
   "dependencies": {
     "core-js": "^2.6.5",
+    "mobile-device-detect": "^0.2.3",
     "node-sass": "^4.12.0",
     "sass-loader": "^7.1.0",
     "unsemantic": "^1.2.3",
     "vue": "^2.6.10",
+    "vue-multiselect": "^2.1.6",
     "webpack": "^4.36.1",
     "webpack-cli": "^3.3.6"
   },
